# osint-veil

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  prompt_claude_code_privacy_proxy.md  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: ci.yml
cases/: cliente_a_2026.yaml
deploy/: egress_lockdown.sh  entrypoint.sh
docs/: DEPLOY.md  DESIGN.md  VISION.md
proxy/: __init__.py  app.py  claude_client.py  cli.py  config.py  egress.py  gateway.py  jobs.py  keygen.py  logging_setup.py  openai_bridge.py  orchestrator.py  policy.py  report.py  sanitizer.py  secrets.py  storage.py  summarizer.py  tools_external.py
tests/: conftest.py  test_claude_client.py  test_detection.py  test_endpoints.py  test_gateway.py  test_hardening.py  test_jobs.py  test_openai_bridge.py  test_orchestrator.py  test_policy.py  test_report.py  test_sanitizer.py  test_secrets_vault.py  test_storage.py  test_summarizer.py  test_tools_external.py
tests/fixtures_cases/: cliente_a_2026.yaml
